BEGIN;

-- Nettoyage des tables dans l'ordre inverse des dépendances
DROP TABLE IF EXISTS "quiz_has_tag";
DROP TABLE IF EXISTS "attempt";
DROP TABLE IF EXISTS "choice";
DROP TABLE IF EXISTS "question";
DROP TABLE IF EXISTS "tag";
DROP TABLE IF EXISTS "level";
DROP TABLE IF EXISTS "quiz";
DROP TABLE IF EXISTS "user";

-- Table des utilisateurs
CREATE TABLE "user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "firstname" TEXT NOT NULL,
  "lastname" TEXT NOT NULL,
  "email" TEXT NOT NULL UNIQUE,
  "password" TEXT NOT NULL,
  "role" TEXT NOT NULL DEFAULT 'member',

  "created_at" TIMESTAMPTZ DEFAULT NOW(),
  "updated_at" TIMESTAMPTZ DEFAULT NOW()
);

-- Table des quizzes
CREATE TABLE "quiz" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" TEXT NOT NULL,
  "description" TEXT,
  "author_id" INTEGER NOT NULL REFERENCES "user"("id") ON DELETE CASCADE,

  "created_at" TIMESTAMPTZ DEFAULT NOW(),
  "updated_at" TIMESTAMPTZ DEFAULT NOW()
);

-- Table des niveaux de difficulté
CREATE TABLE "level" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" TEXT NOT NULL UNIQUE
);

-- Table des questions
CREATE TABLE "question" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "description" TEXT NOT NULL,
  "anecdote" TEXT,
  "wiki_link" TEXT,
  "quiz_id" INTEGER NOT NULL REFERENCES "quiz"("id") ON DELETE CASCADE,
  "level_id" INTEGER NOT NULL REFERENCES "level"("id"),

  "created_at" TIMESTAMPTZ DEFAULT NOW(),
  "updated_at" TIMESTAMPTZ DEFAULT NOW()
);

-- Table des choix de réponse
CREATE TABLE "choice" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "description" TEXT NOT NULL,
  "is_valid" BOOLEAN NOT NULL DEFAULT FALSE,
  "question_id" INTEGER NOT NULL REFERENCES "question"("id") ON DELETE CASCADE
);

-- Table des tags
CREATE TABLE "tag" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" TEXT NOT NULL UNIQUE,
  "color" TEXT,
  "parent_tag_id" INTEGER REFERENCES "tag"("id") ON DELETE SET NULL
);

-- Table des tentatives de quiz
CREATE TABLE "attempt" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" INTEGER NOT NULL REFERENCES "user"("id") ON DELETE CASCADE,
  "quiz_id" INTEGER NOT NULL REFERENCES "quiz"("id") ON DELETE CASCADE,
  "user_score" INTEGER NOT NULL DEFAULT 0,
  "max_possible_score" INTEGER NOT NULL DEFAULT 0,

  "created_at" TIMESTAMPTZ DEFAULT NOW()
);

-- Table de liaison quiz <-> tag (many-to-many)
CREATE TABLE "quiz_has_tag" (
  "quiz_id" INTEGER NOT NULL REFERENCES "quiz"("id") ON DELETE CASCADE,
  "tag_id" INTEGER NOT NULL REFERENCES "tag"("id") ON DELETE CASCADE,
  PRIMARY KEY ("quiz_id", "tag_id")
);

COMMIT;
